PAAS-756 full setenv.sh update from entrypoint